--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node main.ts",
+    "start": "ts-node src/main.ts",
     "pretty": "prettier --write '{,src/**/}*.ts'"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "@solana/web3.js": "^1.7.0",
     "borsh": "^0.6.0",
     "mz": "^2.7.0",
+    "prompts": "^2.4.2",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
@@ -22,7 +23,9 @@
     "@types/eslint": "^7.2.4",
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/mz": "^2.7.2",
+    "@types/node": "~16.11.6",
     "@types/prettier": "^2.1.5",
+    "@types/prompts": "^2.0.14",
     "@types/yaml": "^1.9.7",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
