Adding the custom inputs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     }
   },
   "compilerOptions": {
-    "declaration": false,
+    "declaration": true,
     "moduleResolution": "node",
     "module": "es2015",
     "outDir": "build",
