--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node src/main.ts",
-    "pretty": "prettier --write '{,src/**/}*.ts'"
+    "pretty": "prettier --write '{,src/**/}*.ts'",
+    "build": "tsc"
   },
   "dependencies": {
     "@metaplex-foundation/beet": "^0.1.4",
