--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@_koi/web3.js": "^0.0.6",
     "@metaplex-foundation/beet": "^0.1.4",
     "@solana/buffer-layout": "^4.0.0",
-    "@solana/web3.js": "^1.7.0",
     "borsh": "^0.6.0",
     "mz": "^2.7.0",
     "prompts": "^2.4.2",
