--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@metaplex-foundation/beet": "^0.1.4",
     "@solana/buffer-layout": "^4.0.0",
     "borsh": "^0.6.0",
+    "dotenv": "^16.0.1",
     "mz": "^2.7.0",
     "prompts": "^2.4.2",
     "yaml": "^1.10.2"
