--- a/package.json
+++ b/package.json
@@ -8,19 +8,23 @@
   "scripts": {
     "start": "ts-node src/main.ts",
     "pretty": "prettier --write '{,src/**/}*.ts'",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "babel-node test/submit.js"
   },
   "dependencies": {
     "@_koi/web3.js": "^0.0.6",
+    "@babel/node": "^7.20.7",
     "@metaplex-foundation/beet": "^0.1.4",
     "@solana/buffer-layout": "^4.0.0",
     "borsh": "^0.6.0",
+    "buffer-layout": "^1.2.2",
     "dotenv": "^16.0.1",
     "mz": "^2.7.0",
     "prompts": "^2.4.2",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.7",
     "@tsconfig/recommended": "^1.0.1",
     "@types/eslint": "^7.2.4",
     "@types/eslint-plugin-prettier": "^3.1.0",
@@ -31,6 +35,7 @@
     "@types/yaml": "^1.9.7",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
+    "babel-node": "^0.0.1-security",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -41,5 +46,6 @@
   },
   "engines": {
     "node": ">=14.0.0"
-  }
+  },
+  "type": "module"
 }
