--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.1",
     "mz": "^2.7.0",
     "prompts": "^2.4.2",
+    "web3.storage": "^4.4.0",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
