--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
   "compilerOptions": {
     "declaration": true,
     "moduleResolution": "node",
-    "module": "es2015",
+    "module": "CommonJS",
     "outDir": "build",
   },
   "include": ["src/*"],
