--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "dotenv": "^16.0.1",
     "prompts": "^2.4.2",
     "web3.storage": "^4.4.0",
-    "yaml": "^1.10.2",
-    "typescript": "~4.5.3"
+    "yaml": "^1.10.2"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
