--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
     "node": ">=14.0.0"
   },
   "bin": {
-    "create-task-cli":"node --no-warnings ./build/main.js"
+    "create-task-cli":"./build/main.js"
   }
 }
