--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "borsh": "^0.6.0",
     "dotenv": "^16.0.1",
     "mz": "^2.7.0",
+    "ora": "^6.1.2",
     "prompts": "^2.4.2",
     "web3.storage": "^4.4.0",
     "yaml": "^1.10.2"
