--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,14 @@
   "extends": "@tsconfig/recommended/tsconfig.json",
   "ts-node": {
     "compilerOptions": {
-      "module": "commonjs"
+      "module": "commonjs",
+
     }
   },
   "compilerOptions": {
     "declaration": true,
     "moduleResolution": "node",
-    "module": "es2015",
+    "module": "CommonJS",
     "outDir": "build",
   },
   "include": ["src/*"],
