--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mz": "^2.7.0",
     "ora": "^6.1.2",
     "prompts": "^2.4.2",
+    "read-yaml-file": "^2.1.0",
     "web3.storage": "^4.4.0",
     "yaml": "^1.10.2"
   },
