--- a/config-task.yml
+++ b/config-task.yml
@@ -1,4 +1,4 @@
-# Name and desciption sof your task
+# Name and desciption of your task
 task_name: "test-task"
 task_description: "This task is to test out the namespace function"
 # network value can be DEVELOPMENT , ARWEAVE or IPFS
