--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,15 @@
   "extends": "@tsconfig/recommended/tsconfig.json",
   "ts-node": {
     "compilerOptions": {
-      "module": "commonjs",
-
+      "module": "commonjs"
     }
   },
   "compilerOptions": {
     "declaration": true,
     "moduleResolution": "node",
     "module": "CommonJS",
-    "outDir": "build",
+    "outDir": "build"
   },
   "include": ["src/*"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules"]
 }
