--- a/config-task.yml
+++ b/config-task.yml
@@ -1,14 +1,15 @@
-#Provide the taskId if you are updating the task
-task_id: ""
+# Name and metadata of your task
+task_name: "Your-task-name"
+author: "koii"
+description: "This will be description of your task"
+repositoryUrl: "https://github.com/koii-network/task-examples"
+imageUrl: "imageUrl"
 
-# network value can be DEVELOPMENT , ARWEAVE or IPFS
+# network value can be DEVELOPMENT , ARWEAVE or IPFS, Recommended IPFS as the cli automatically takes care of uploading the executable with the help of web3.js key
 task_executable_network: "IPFS"
 
 # Path to your executable webpack if the selected network is IPFS otherwise leave blank
-task_audit_program: "/home/ghazanfer/Desktop/KOII/K2-Task-Template/dist/main.js"
-
-# Provide your transaction ID in case of ARWEAVE and in case of DEVELOPMENT give your executable name as main otherwise leave blank
-task_audit_program_id: "main"
+task_audit_program: ""
 
 # Total round time of your task : it must be given in slots and each slot is rougly equal to 4ms
 round_time: 500
@@ -22,22 +23,15 @@ minimum_stake_amount: 2
 
 # total_bounty_amount cannot be grater than bounty_amount_per_round
 # total bounty is not accepted in case of update task
-total_bounty_amount: 50
+total_bounty_amount: 10
 
-bounty_amount_per_round: 2
+bounty_amount_per_round: 1
 
 #Number of times allowed to re-submit the distribution  list in case the distribution list is audited
 allowed_failed_distributions: 3
 
-#Space in MBs
+#Space in MBs for the account size, that holds the task data
 space: 1
-
-# Name and desciption of your task
-task_name: "Google-doodle-scraping"
-author: "raj"
-description: "This task demonstrates ability to scrape the doodles"
-repositoryUrl: "https://github.com/koii-network/task-examples"
-imageUrl: "imageUrl"
 
 # Note that the value field in RequirementTag is optional, so it is up to you to include it or not based on your use case.
 # To add more global variables and task variables, please refer the type,value,description format shown below
@@ -55,3 +49,12 @@ requirementsTags:
     value: "M1"
   - type: OS
     value: "OSX"
+
+# OPTIONAL variables below 
+
+# OPTIONAL Only provide the taskId if you are updating the task otherwise leave blank
+task_id: ""
+
+# OPTIONAL only Provide your transaction ID in case of ARWEAVE and in case of DEVELOPMENT give your executable name as main otherwise leave blank
+task_audit_program_id: ""
+
