--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@_koii/create-task-cli",
-  "version": "0.1.33",
+  "version": "0.1.34",
   "description": "",
   "keywords": [],
   "author": "",
   "license": "MIT",
   "main": "./build/main.js",
   "scripts": {
-    "start": "ts-node src/main.ts",
+    "start": "NODE_NO_WARNINGS=1 ts-node src/main.ts",
     "pretty": "prettier --write '{,src/**/}*.ts'",
     "build": "tsc"
   },
