--- a/config-task.yml
+++ b/config-task.yml
@@ -1,12 +1,19 @@
 # Name and metadata of your task
-task_name: "Your-task-name"
+task_name: "test"
 author: "koii"
 description: "This will be description of your task"
 repositoryUrl: "https://github.com/koii-network/task-examples"
 imageUrl: "imageUrl"
 
 # network value can be DEVELOPMENT , ARWEAVE or IPFS, Recommended IPFS as the cli automatically takes care of uploading the executable with the help of web3.js key
-task_executable_network: "IPFS"
+task_executable_network: "DEVELOPMENT"
+
+# Provide your web3.storage key as it is needed for uploading your metadata
+secret_web3_storage_key: ''
+
+# Provide your transaction ID in case of ARWEAVE and in case of DEVELOPMENT give your executable name as main otherwise leave blank
+task_audit_program_id: 'main'
+
 
 # Path to your executable webpack if the selected network is IPFS otherwise leave blank
 task_audit_program: ""
@@ -55,5 +62,4 @@ requirementsTags:
 # OPTIONAL Only provide the taskId if you are updating the task otherwise leave blank
 task_id: ""
 
-# OPTIONAL only Provide your transaction ID in case of ARWEAVE and in case of DEVELOPMENT give your executable name as main otherwise leave blank
-task_audit_program_id: ""
+
