--- a/config-task.yml
+++ b/config-task.yml
@@ -8,12 +8,6 @@ imageUrl: "imageUrl"
 # network value can be DEVELOPMENT , ARWEAVE or IPFS, Recommended IPFS as the cli automatically takes care of uploading the executable with the help of web3.js key
 task_executable_network: "IPFS"
 
-# Provide your web3.storage key as it is needed for uploading your metadata
-secret_web3_storage_key: ""
-
-# Provide your transaction ID in case of ARWEAVE and in case of DEVELOPMENT give your executable name as main otherwise leave blank
-task_audit_program_id: "main"
-
 # Path to your executable webpack if the selected network is IPFS otherwise leave blank
 task_audit_program: ""
 
@@ -60,3 +54,6 @@ requirementsTags:
 
 # OPTIONAL Only provide the taskId if you are updating the task otherwise leave blank
 task_id: ""
+
+# OPTIONAL only Provide your transaction ID in case of ARWEAVE and in case of DEVELOPMENT give your executable name as main otherwise leave blank
+task_audit_program_id: ""
