--- a/config-task.yml
+++ b/config-task.yml
@@ -6,7 +6,10 @@ repositoryUrl: "https://github.com/koii-network/task-examples"
 imageUrl: "imageUrl"
 
 # network value can be DEVELOPMENT , ARWEAVE or IPFS, Recommended IPFS as the cli automatically takes care of uploading the executable with the help of web3.js key
-task_executable_network: "IPFS"
+task_executable_network: "DEVELOPMENT"
+
+# Provide your transaction ID in case of ARWEAVE and in case of DEVELOPMENT give your executable name as main otherwise leave blank
+task_audit_program_id: "main"
 
 # Path to your executable webpack if the selected network is IPFS otherwise leave blank
 task_audit_program: ""
@@ -54,6 +57,3 @@ requirementsTags:
 
 # OPTIONAL Only provide the taskId if you are updating the task otherwise leave blank
 task_id: ""
-
-# OPTIONAL only Provide your transaction ID in case of ARWEAVE and in case of DEVELOPMENT give your executable name as main otherwise leave blank
-task_audit_program_id: ""
