--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "start": "NODE_NO_WARNINGS=1 ts-node src/main.ts",
     "pretty": "prettier --write '{,src/**/}*.ts'",
     "build": "tsc",
-    "lint": "eslint . --quiet --ext .ts,.tsx"
+    "lint": "eslint . --quiet --ext .ts,.tsx",
+    "test": "jest"
   },
   "dependencies": {
     "@_koi/web3.js": "^0.0.6",
     "@solana/buffer-layout": "^4.0.0",
+    "@types/jest": "^29.5.2",
+    "add": "^2.0.6",
     "borsh": "^0.6.0",
     "dotenv": "^16.0.1",
     "mz": "^2.7.0",
+    "npm": "^9.8.0",
     "ora": "^6.1.2",
     "prompts": "^2.4.2",
     "read-yaml-file": "^2.1.0",
+    "ts-jest": "^29.1.1",
     "web3.storage": "^4.4.0",
     "yaml": "^1.10.2"
   },
