--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
     "module": "CommonJS",
     "outDir": "build"
   },
-  "include": ["src/*"],
-  "exclude": ["node_modules","build"]
+  "include": ["src/*/*", "src/utils/*", "src/**/*.spec.ts"],
+  "exclude": ["node_modules", "build"]
 }
