--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "add": "^2.0.6",
     "borsh": "^0.6.0",
     "dotenv": "^16.0.1",
+    "joi": "^17.9.2",
     "mz": "^2.7.0",
     "npm": "^9.8.0",
     "ora": "^6.1.2",
@@ -36,7 +37,7 @@
     "@types/mz": "^2.7.2",
     "@types/node": "^18.11.19",
     "@types/prettier": "^2.1.5",
-    "@types/prompts": "^2.0.14",
+    "@types/prompts": "^2.4.4",
     "@types/yaml": "^1.9.7",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
