--- a/config-task.yml
+++ b/config-task.yml
@@ -5,16 +5,16 @@ description: "This will be description of your task"
 repositoryUrl: "https://github.com/koii-network/task-examples"
 
 # network value can be DEVELOPMENT , ARWEAVE or IPFS, Recommended IPFS as the cli automatically takes care of uploading the executable with the help of web3.js key
-task_executable_network: "DEVELOPMENT"
+task_executable_network: "IPFS"
 
 # Provide your transaction ID in case of ARWEAVE and in case of DEVELOPMENT give your executable name as main otherwise leave blank
 task_audit_program_id: "main"
 
 # Path to your executable webpack if the selected network is IPFS otherwise leave blank
-task_audit_program: ""
+task_audit_program: "./build/main.js"
 
 # Total round time of your task : it must be given in slots and each slot is rougly equal to 4ms
-round_time: 500
+round_time: 50
 
 audit_window: 200
 submission_window: 200
