--- a/config-task.yml
+++ b/config-task.yml
@@ -11,13 +11,8 @@ task_executable_network: "DEVELOPMENT"
 # Path to your executable webpack if the selected network is IPFS otherwise leave blank
 task_audit_program: ""
 
-<<<<<<< Updated upstream
-# Total round time of your task : it must be given in slots and each slot is rougly equal to 4ms
-round_time: 50
-=======
 # Total round time of your task : it must be given in slots and each slot is roughly equal to 408ms
 round_time: 650
->>>>>>> Stashed changes
 
 audit_window: 250
 submission_window: 250
@@ -30,7 +25,7 @@ minimum_stake_amount: 2
 # total bounty is not accepted in case of update task
 total_bounty_amount: 10
 
-bounty_amount_per_round: 0.1
+bounty_amount_per_round: 20
 
 #Number of times allowed to re-submit the distribution  list in case the distribution list is audited
 allowed_failed_distributions: 3
@@ -52,10 +47,11 @@ requirementsTags:
   - type: STORAGE
     value: "5 GB"
 
-# OPTIONAL variables below 
+# OPTIONAL variables below
 
-# OPTIONAL Only provide the taskId if you are updating the task otherwise leave blank
+# OPTIONAL Only provide the taskId and migrationDescription if you are updating the task otherwise leave blank
 task_id: ""
+migrationDescription: ""
 
 # OPTIONAL only Provide your transaction ID in case of ARWEAVE and in case of DEVELOPMENT give your executable name as main otherwise leave blank
 task_audit_program_id: "main"
