--- a/config-task.yml
+++ b/config-task.yml
@@ -14,7 +14,7 @@ task_audit_program_id: "main"
 task_audit_program: "./build/main.js"
 
 # Total round time of your task : it must be given in slots and each slot is rougly equal to 4ms
-round_time: 50n
+round_time: 50
 
 audit_window: 200
 submission_window: 200
@@ -59,4 +59,4 @@ requirementsTags:
 
 # OPTIONAL Only provide the taskId if you are updating the task otherwise leave blank
 task_id: ""
-imageUrl: ""
+
