--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/jest": "^29.5.2",
     "add": "^2.0.6",
     "borsh": "^0.6.0",
+    "colors": "^1.4.0",
     "dotenv": "^16.0.1",
     "joi": "^17.9.2",
     "mz": "^2.7.0",
