--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@_koi/web3.js": "^0.0.6",
     "@solana/buffer-layout": "^4.0.0",
+    "@spheron/storage": "^2.0.4",
     "borsh": "^0.6.0",
     "dotenv": "^16.0.1",
     "mz": "^2.7.0",
