--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@_koii/create-task-cli",
-  "version": "0.1.41",
+  "version": "0.1.42",
   "description": "",
   "keywords": [],
   "author": "",
@@ -19,9 +19,11 @@
     "borsh": "^0.6.0",
     "dotenv": "^16.0.1",
     "mz": "^2.7.0",
+    "node-fetch": "2",
     "ora": "^6.1.2",
     "prompts": "^2.4.2",
     "read-yaml-file": "^2.1.0",
+    "unzipper": "^0.10.14",
     "web3.storage": "^4.4.0",
     "yaml": "^1.10.2"
   },
@@ -31,8 +33,10 @@
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/mz": "^2.7.2",
     "@types/node": "^18.11.19",
+    "@types/node-fetch": "^2.6.11",
     "@types/prettier": "^2.1.5",
     "@types/prompts": "^2.0.14",
+    "@types/unzipper": "^0.10.9",
     "@types/yaml": "^1.9.7",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
