--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "dotenv": "^16.0.1",
     "mz": "^2.7.0",
     "node-fetch": "2",
+    "node-stream-zip": "^1.15.0",
     "ora": "^6.1.2",
     "prompts": "^2.4.2",
     "read-yaml-file": "^2.1.0",
-    "unzipper": "^0.10.14",
     "web3.storage": "^4.4.0",
     "yaml": "^1.10.2"
   },
