--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
     "module": "CommonJS",
     "outDir": "build"
   },
-  "include": ["src/*"],
+  "include": ["src/"],
   "exclude": ["node_modules","build"]
 }
