--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@_koii/create-task-cli",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "keywords": [],
   "author": "",
   "license": "MIT",
   "main": "./build/export.js",
   "scripts": {
-    "start": "NODE_NO_WARNINGS=1 ts-node src/main.ts",
+    "start": "ts-node src/main.ts",
     "pretty": "prettier --write '{,src/**/}*.ts'",
     "build": "tsc",
     "lint": "eslint . --quiet --ext .ts,.tsx"
