--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@_koi/web3.js": "^0.0.6",
+    "@_koii/web3.js": "^0.1.11",
     "@solana/buffer-layout": "^4.0.0",
+    "@solana/spl-token": "0.2.0",
     "borsh": "^0.6.0",
     "dotenv": "^16.0.1",
     "mz": "^2.7.0",
