--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
     "module": "CommonJS",
     "outDir": "build",
   },
-  "include": ["src/*"],
+  "include": ["src/"],
   "exclude": ["node_modules"],
 }
