--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@_koii/create-task-cli",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
   "keywords": [],
   "author": "",
@@ -13,7 +13,7 @@
     "lint": "eslint . --quiet --ext .ts,.tsx"
   },
   "dependencies": {
-    "@_koii/storage-task-sdk": "^1.2.3",
+    "@_koii/storage-task-sdk": "1.2.7",
     "@_koii/web3.js": "^0.1.11",
     "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "0.2.0",
@@ -52,7 +52,7 @@
     "typescript": "^4.0.5"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   },
   "bin": {
     "create-task-cli": "./build/main.js"
