--- a/config-task.yml
+++ b/config-task.yml
@@ -1,64 +1,67 @@
 # Name and metadata of your task
-task_name: "Your-task-name"
-author: "koii"
-description: "This will be description of your task"
-repositoryUrl: "https://github.com/koii-network/task-examples"
+task_name: 'task name'
+author: 'Koii'
+description: 'description'
+repositoryUrl: 'https://github.com/koii-network/task-template' # Replace with your own repo URL
+imageUrl: 'imageUrl'
+infoUrl: 'infoUrl'
 
-# network value can be DEVELOPMENT , ARWEAVE or IPFS, Recommended IPFS as the cli automatically takes care of uploading the executable with the help of web3.js key
-task_executable_network: "IPFS"
+# Task executable network: DEVELOPMENT, ARWEAVE, or IPFS
+# IPFS is the default value, as the CLI automatically manages the upload process via the Koii Storage SDK.
+task_executable_network: 'IPFS'
 
-# Path to your executable webpack if the selected network is IPFS and in case of DEVELOPMENT  name it as main
-task_audit_program: "/home/ghazanfer/Extended-Ubuntu/KOII/K2-Task-Template/dist/main.js"
+# Task audit program: Path to your executable webpack if the selected network is IPFS. In the case of DEVELOPMENT, name it as main.
+task_audit_program: 'dist/main.js'
 
-# Total round time of your task : it must be given in slots and each slot is rougly equal to 4ms
-round_time: 650
+# Round time: The total duration of your task, measured in slots (with each slot approximately equal to 408ms).
+round_time: 1500
 
-audit_window: 250
-submission_window: 250
+# Audit window: The audit window should be greater than 1/3 of the round time.
+audit_window: 350
 
-# Amounts in KOII
+# Submission window: The submission window should be greater than 1/3 of the round time.
+submission_window: 350
 
-minimum_stake_amount: 1
+# Minimum stake amount: The minimum amount of KOII that a user must stake in order to participate in the task.
+minimum_stake_amount: 1.9
 
-# total_bounty_amount cannot be grater than bounty_amount_per_round
-# total bounty is not accepted in case of update task
+# Task Bounty Type: KOII, KPL
+task_type: 'KPL'
+
+# OPTIONAL (ONLY IF Task Type = KPL) : Token Mint Address, Fire Token as an example here. 
+token_type: "BAmB86Mt6FDaqTjLzKimBjHtwV93PGQitjW5zKNnBVEU"
+
+# Total bounty amount: The total bounty amount that will be distributed to the task. (Not accepted in case of update task).
 total_bounty_amount: 10
+bounty_amount_per_round: 0.1
 
-bounty_amount_per_round: 1
-
-#Number of times allowed to re-submit the distribution  list in case the distribution list is audited
+# Allowed failed distributions: Number of times re-submission is allowed for the distribution list in case of an audit.
+# It is also the number of rounds submission will be kept.
 allowed_failed_distributions: 3
 
-#Space in MBs for the account size, that holds the task data
-space: 1
+# Space: Space in MBs for the account size, that holds the task data.
+# For testing tasks this can be set to 0.1, but for production it should be set to at least 1.
+space: 0.1
 
 # Note that the value field in RequirementTag is optional, so it is up to you to include it or not based on your use case.
-# To add more global variables and task variables, please refer the type,value,description format shown below
+# To add more global variables and task variables, please refer to the type, value, description format shown below.
 
 requirementsTags:
-  - type: GLOBAL_VARIABLE
-    value: "WEB3.STORAGE_KEY"
-    description: "This key is required to upload the data to IPFS"
   - type: CPU
-    value: "4-core"
+    value: '4-core'
   - type: RAM
-    value: "5 GB"
+    value: '5 GB'
   - type: STORAGE
-    value: "5 GB"
-  - type: NETWORK
-    value: "testnet"
-  - type: ARCHITECTURE
-    value: "M1"
-  - type: OS
-    value: "OSX"
+    value: '5 GB'
+  - type: TASK_VARIABLE
+    value: 'TWITTER_PASSWORD'
+    description: 'The password of your volunteer Twitter account.'
 
-# OPTIONAL variables for creatinf task / REQUIRED varibales for update task
+# OPTIONAL variables for creating task / REQUIRED variables for updating task
 
-#Provide the taskId for the task you want to update
-task_id: ""
+# ONLY provide the task_id and migrationDescription if you are updating the task, otherwise leave blank.
+# Task_id: Previous task ID.
+task_id: ''
 
-# Provide the description for changes made in new version of task
-migrationDescription: ""
-
-# ImageUrl is an option parameter for the task, if you want to add an image to your task, you can add the url here
-imageUrl: ""
+# Migration description: Provide the description for changes made in the new version of the task.
+migrationDescription: ''
