update delete task

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@_koii/create-task-cli",
+  "name": "@_koii/create-task-cli-maintainer",
   "version": "0.1.13",
   "description": "",
   "keywords": [],
   "author": "",
   "license": "MIT",
-  "main": "./build/main.js",
+  "main": "./build/export.js",
   "scripts": {
     "start": "ts-node src/main.ts",
     "pretty": "prettier --write '{,src/**/}*.ts'",
