--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,10 +26,7 @@ deploy:
         fi
         npm publish --access public
       elif [ "$CI_COMMIT_BRANCH" == "beta" ]; then
-        if [[ "$VERSION" != *"beta"* ]]; then
-          echo "Error: Version for beta branch must include 'beta'"
-          exit 1
-        fi
+        npm version prerelease --preid=beta --no-git-tag-version
         npm publish --tag beta -f --access public
       fi
   only:
