--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@_koii/create-task-cli",
-  "version": "1.1.5",
+  "version": "1.1.6-beta1",
   "description": "",
   "keywords": [],
   "author": "",
