--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@_koii/create-task-cli",
-  "version": "1.1.7-beta2",
+  "version": "1.1.7",
   "description": "",
   "keywords": [],
   "author": "",
